--- a/minigame.css
+++ b/minigame.css
@@ -101,3 +101,30 @@ border: 1px solid grey;
     
     line-height:75px;
 }
+#failBox{
+    width:100%;
+    height:30px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
+    font-size:18px;
+    line-height: 30px;
+    margin:10px;
+    color: rgba(255, 100, 100, 0.692);
+    background-color:rgba(255, 88, 88, 0.315);
+    border-radius: 10px;
+    visibility:collapse;
+}
+#startGame_button{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 14px;
+    font-weight: 300;
+    height: 50px;
+    padding-left:50px;
+    padding-right:50px;
+    background: rgb(0,255,234);
+    background: radial-gradient(circle, rgba(0,255,234,0.4906337535014006) 0%, rgba(0,255,234,0.14889705882352944) 100%);
+    border: 1px solid #00ffea;
+    border-radius: 5px;
+    color: rgb(240, 240, 240);
+    margin: 5px;
+}
